// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core utils extractBlogPostBeforeTruncate 1`] = `
"---
title: Truncation Example
---

All this will be part of the blog post summary.

Even this.

"
`;

exports[`core utils extractBlogPostBeforeTruncate 2`] = `
"---
title: Non-truncation Example
---

All this will be part of the blog post summary.

Even this.

And anything from here on down will still be.

And this.

And this too.
"
`;

exports[`core utils extractBlogPostSummary 1`] = `
"---
title: Truncation Example
---

All this will be part of the blog post summary.

Even this.

<!--truncate-->

But anything from here on down will not be.

Not this.

Or this.
"
`;

exports[`core utils extractBlogPostSummary 2`] = `
"---
title: Non-truncation Example
---

All this will be part of the blog post summary.

Even this.

And anything from here on down will still be.

And this.

And this too.
"
`;
